Bump version to 1.3.0
Java compiler version is now set to 11.
Plugin and library dependencies updated.