@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.ldaptive</groupId>
     <artifactId>ldaptive-parent</artifactId>
-    <version>1.2.5-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
   </parent>
 
   <properties>
@@ -236,9 +236,13 @@
           <debug>true</debug>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
-          <compilerArgument>-Xlint:unchecked</compilerArgument>
-          <source>1.8</source>
-          <target>1.8</target>
+          <compilerArgs>
+            <arg>-Xlint:unchecked</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+          </compilerArgs>
+          <source>11</source>
+          <target>11</target>
         </configuration>
         <executions>
           <execution>
